--- a/HRM/HRM/Views/Shared/_Layout.cshtml
+++ b/HRM/HRM/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Division","Index","Divisions")</li>
+                    <li>@Html.ActionLink("Dept","Index","Depts")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
