Index page Summary

--- a/HRM/HRM/Views/Home/Index.cshtml
+++ b/HRM/HRM/Views/Home/Index.cshtml
@@ -2,4 +2,26 @@
     ViewBag.Title = "Home Page";
 }
 
+
+
+
 <h1>Human Resource Management</h1>
+<p>Number of Divisions</p>
+<h1> @ViewBag.nmbrofDivision</h1>
+
+<p>Number of Dept</p>
+<h1>@ViewBag.nmbrofDept</h1> 
+
+
+<p>Number of Section</p>
+ <h1>@ViewBag.nmbrofSection</h1> 
+
+ 
+
+ <p>Number of Designation</p>
+ <h1>@ViewBag.nmbrofDesignation</h1> 
+
+ <p>Number of Employee</p>
+  <h1>@ViewBag.nmbrofEmployee</h1> 
+
+ 
