Image Upload Work

--- a/HRM/HRM/Views/Employees/Delete.cshtml
+++ b/HRM/HRM/Views/Employees/Delete.cshtml
@@ -99,6 +99,14 @@
             @Html.DisplayFor(model => model.Address)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.EmployeePhotoPath)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EmployeePhotoPath)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
