--- a/HRM/HRM/Views/Employees/Index.cshtml
+++ b/HRM/HRM/Views/Employees/Index.cshtml
@@ -44,6 +44,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Address)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EmployeePhotoPath)
+        </th>
         <th></th>
     </tr>
 
@@ -82,6 +85,19 @@
         <td>
             @Html.DisplayFor(modelItem => item.Address)
         </td>
+    
+
+        <td>
+        <td>
+            @*<img src="/Images/Arisha01191718347.jpg" id="photo" height="50" width="50" />*@
+            <img src="@item.EmployeePhotoPath.TrimStart('~')" id="photo" height="50" width="50" />
+            </td>
+        
+
+
+
+
+        
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
